@todo .. !!! be aware model_ loader::database construct() support works in old revisions.
@todo .. add to user guide php5 method chaining support like this 
@todo .. add benchmark_micro_timer() function to benchmark helper or use native function. and use this function in
DB class for profiling

echo agent::instance()
->init()
->browser();

echo calendar::instance()
->init()
->generate(2006, 10);

@todo .. Add Form_controller (Global) tutorial to user guide .. create a directory called /forms
then create a Form_controller to /parents folder. add common functions to Form controller.

@todo .. add native extend functionality to native Obullo Code Model library.
http://www.askaboutphp.com/50/codeigniter-extending-the-native-model-and-make-it-your-own.html 
(CJ Lazell advices)

@todo .. add a loader::app_model('users/balbla'); direcotry support to app_ function.

models/
users.php
..users/
    settings.php
    get.php
    post.php
    put.php
    delete.php

@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. Global controllers pattern extends rules ..!!!
@todo .. put archived doc meta tag to old user guide base layout ..
@todo .. look at globally set database object from app_controller.
@todo .. change obullo mvc2 names as Obullo GC in web site.            
@todo .. add to GC Map (application flow chart) to web site.                                       
@todo .. session database sql SET userdata field CHARACTER as utf8 into user_guide
CREATE TABLE `ob_sessions` (
  `user_data` text character set utf8 NOT NULL,
) 

NEXT VERSION
----------------------------------------------------------------

@next version todo .. utf8 support http://www.phpwact.org/php/i18n/utf-8
@next version todo .. look at include ob_error.php errors when someone use third party session library.
@next version todo .. if not posted a variable in form_validate class add it to log debug msg..
this variable not posted !!! .. 